# lobster

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  run-travis-job.sh  rustfmt.toml
benches/: quantcup.rs  simple.rs
data/: orders.csv
examples/: quantcup.rs
lobster-js/: Cargo.toml  LICENSE_MIT  README.md
lobster-js/example/: loobster.ts  package-lock.json  package.json  tsconfig.json
lobster-js/src/: lib.rs
quantcup/: engine.c  score.c  score_feed.h
src/: arena.rs  error.rs  lib.rs  models.rs  orderbook.rs  ordermap.rs
tests/: orderbook.rs
