[package]
name = "lobster"
version = "0.2.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2018"
license = "ISC"

description = "A fast limit order book (LOB)"
homepage = "https://github.com/rubik/lobster"
repository = "https://github.com/rubik/lobster"
keywords = ["orderbook", "order", "limit", "hft"]

[dependencies]

[dev-dependencies]
criterion = "0.3"
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "simple"
harness = false
