[package]
name = "lobster"
version = "0.7.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2018"
license = "ISC"

readme = "README.md"
description = "A fast limit order book (LOB)"
documentation = "https://docs.rs/lobster"
homepage = "https://github.com/rubik/lobster"
repository = "https://github.com/rubik/lobster"
keywords = ["orderbook", "order", "limit", "hft"]

[badges]
coveralls = { repository = "rubik/lobster" }
travis-ci = { repository = "rubik/lobster" }

[dependencies]
hashbrown = { version = "0.1",  optional=true }
serde = { version = "1.0.152", features = ["derive"], optional=true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
csv = "1.1"
# serde = { version = "1", features = ["derive"] }


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
codegen-units = 1

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "quantcup"
harness = false


[[workspaces]]
members = [
  "lobster-js"
]

[features]
default = ["std"]
std = []
no_std = ["hashbrown"]
wasm = ["serde"]