[package]
name = "lobster-orderbook-js"
version = "0.1.1"
authors = ["david barinas <hi@cubo.land>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
serde-wasm-bindgen = "0.4.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

# `lobser` dependency
lobster = { path = "../", features = ["no_std", "wasm"],  default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
console_error_panic_hook = "0.1.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
